--- a/BinanceAPI/MainWindow.xaml
+++ b/BinanceAPI/MainWindow.xaml
@@ -7,31 +7,38 @@
         xmlns:local="clr-namespace:BinanceAPI"
         xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" x:Class="BinanceAPI.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="342" Width="783" Loaded="Window_Loaded">
-    <Grid HorizontalAlignment="Center" Width="769" Height="450" VerticalAlignment="Top" >
+        Title="For specially НЕОХ.ЕВАЙ!!!" Height="659" Width="764" Loaded="Window_Loaded">
+    <Grid Margin="-7,10,10,10" >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0*"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="557*"/>
-            <ColumnDefinition Width="350*"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="Start" Content="Старт" HorizontalAlignment="Left" Margin="301,88,0,0" VerticalAlignment="Top" Click="Button_Click"/>
-        <Button x:Name="Add" Content="Добавить" HorizontalAlignment="Left" Margin="227,10,0,0" VerticalAlignment="Top" Click="Add_Click"/>
-        <Button x:Name="Stop" Content="Стоп" HorizontalAlignment="Left" Margin="378,88,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
+        <Button x:Name="Start" Content="Старт" Margin="0,74,179,0" VerticalAlignment="Top" Click="Button_Click" Height="22" HorizontalAlignment="Right" Width="54" Grid.Row="1"/>
+        <Button x:Name="Add" Content="Добавить" Margin="0,10,155,0" VerticalAlignment="Top" Click="Add_Click" Height="22" HorizontalAlignment="Right" Width="78" Grid.Row="1"/>
+        <Button x:Name="Stop" Content="Стоп" Margin="0,74,124,0" VerticalAlignment="Top" Click="Button_Click_1" Height="22" HorizontalAlignment="Right" Width="50" Grid.Row="1"/>
 
-        <ComboBox x:Name="cbPair" HorizontalAlignment="Left" Margin="318,10,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="413,233,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-        <Label Content="Таймер обновления" HorizontalAlignment="Left" Margin="217,140,0,0" VerticalAlignment="Top" IsEnabled="False" Foreground="#FF120000"/>
+        <ComboBox x:Name="cbPair" Margin="0,9,7,0" VerticalAlignment="Top" Height="22" HorizontalAlignment="Right" Width="120" Grid.Row="1"/>
+        <Label Content="Таймер обновления" Margin="0,112,130,0" VerticalAlignment="Top" IsEnabled="False" Foreground="#FF120000" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="112"/>
 
-        <dxe:TextEdit x:Name="ttime" HorizontalAlignment="Left" Margin="338,140,0,0" VerticalAlignment="Top" Width="35" EditValue="10"/>
-        <DataGrid x:Name="Table" ItemsSource="{Binding }"  AutoGenerateColumns="False" Margin="10,10,0,136" HorizontalAlignment="Left" Width="212">
+        <dxe:TextEdit x:Name="ttime" PreviewTextInput="NumericOnly" Margin="0,112,91,0" VerticalAlignment="Top" EditValue="10" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="34"/>
+        <DataGrid x:Name="Table" ItemsSource="{Binding }"  AutoGenerateColumns="False" Margin="10,1,260,19" LoadingRow="Table_LoadingRow" Grid.Row="1">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Имя" Binding="{Binding symbol}"/>
-                <DataGridTextColumn Header="%" Binding="{Binding priceChangePercent}"/>
+                <DataGridTextColumn Header="%" Binding="{Binding percent}"/>
+                <DataGridTextColumn Header="На старте" Binding="{Binding StartPrice}"/>
 
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="btnChangePeriod" Content="Изменить" HorizontalAlignment="Left" Margin="378,140,0,0" VerticalAlignment="Top" Click="btnChangePeriod_Click"/>
-        <Button x:Name="btndelete" Content="Удалить" HorizontalAlignment="Left" Margin="227,37,0,0" VerticalAlignment="Top" Click="btndelete_Click"/>
-        <ComboBox x:Name="cbdelete" HorizontalAlignment="Left" Margin="318,37,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="btnChangePeriod" Content="Изменить" Margin="0,112,11,0" VerticalAlignment="Top" Click="btnChangePeriod_Click" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="73"/>
+        <Button x:Name="btndelete" Content="Удалить" Margin="0,36,155,0" VerticalAlignment="Top" Click="btndelete_Click" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="78"/>
+        <ComboBox x:Name="cbdelete" Margin="0,36,6,0" VerticalAlignment="Top" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="120"/>
+        <ListBox x:Name="list" Margin="0,149,11,19" HorizontalAlignment="Right" Width="231" Grid.Row="1"/>
 
     </Grid>
 </Window>
