--- a/BinanceAPI/MainWindow.xaml
+++ b/BinanceAPI/MainWindow.xaml
@@ -7,7 +7,17 @@
         xmlns:local="clr-namespace:BinanceAPI"
         xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" x:Class="BinanceAPI.MainWindow"
         mc:Ignorable="d"
-        Title="For specially НЕОХ.ЕВАЙ!!!" Height="659" Width="764" Loaded="Window_Loaded">
+        Title="Specially for НЕОХ.ЕВАЙ!!!" Height="659" Width="764" Loaded="Window_Loaded">
+    <Window.Resources>
+        
+        <local:percentToColorConverter x:Key="percentToColorConverter" />
+
+        <Style x:Key="IdStyle" TargetType="{x:Type DataGridCell}">
+            <Setter Property="Background" Value="{Binding percent, Converter={StaticResource percentToColorConverter}}" />
+            <Setter Property="BorderBrush"  Value="White" />
+        </Style>
+    </Window.Resources>
+    
     <Grid Margin="-7,10,10,10" >
         <Grid.RowDefinitions>
             <RowDefinition Height="0*"/>
@@ -26,19 +36,23 @@
         <ComboBox x:Name="cbPair" Margin="0,9,7,0" VerticalAlignment="Top" Height="22" HorizontalAlignment="Right" Width="120" Grid.Row="1"/>
         <Label Content="Таймер обновления" Margin="0,112,130,0" VerticalAlignment="Top" IsEnabled="False" Foreground="#FF120000" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="112"/>
 
-        <dxe:TextEdit x:Name="ttime" PreviewTextInput="NumericOnly" Margin="0,112,91,0" VerticalAlignment="Top" EditValue="10" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="34"/>
-        <DataGrid x:Name="Table" ItemsSource="{Binding }"  AutoGenerateColumns="False" Margin="10,1,260,19" LoadingRow="Table_LoadingRow" Grid.Row="1">
+        <dxe:TextEdit x:Name="ttime" PreviewTextInput="NumericOnly" Margin="0,112,97,0" VerticalAlignment="Top" EditValue="3" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="28"/>
+        <DataGrid FontSize="14" FontWeight="Bold" x:Name="Table" ItemsSource="{Binding }"  AutoGenerateColumns="False" Margin="10,1,260,19" LoadingRow="Table_LoadingRow" Grid.Row="1">
+
+
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Имя" Binding="{Binding symbol}"/>
-                <DataGridTextColumn Header="%" Binding="{Binding percent}"/>
+                <DataGridTextColumn  Header="%" Binding="{Binding percent}" CellStyle="{StaticResource IdStyle}" Foreground="White"/>
                 <DataGridTextColumn Header="На старте" Binding="{Binding StartPrice}"/>
+                <DataGridTextColumn Header="Ссылка" Binding="{Binding link}"/>
 
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="btnChangePeriod" Content="Изменить" Margin="0,112,11,0" VerticalAlignment="Top" Click="btnChangePeriod_Click" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="73"/>
+        <Button x:Name="btnChangePeriod" Content="Изменить" Margin="0,112,10,0" VerticalAlignment="Top" Click="btnChangePeriod_Click" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="82"/>
         <Button x:Name="btndelete" Content="Удалить" Margin="0,36,155,0" VerticalAlignment="Top" Click="btndelete_Click" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="78"/>
         <ComboBox x:Name="cbdelete" Margin="0,36,6,0" VerticalAlignment="Top" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="120"/>
         <ListBox x:Name="list" Margin="0,149,11,19" HorizontalAlignment="Right" Width="231" Grid.Row="1"/>
 
     </Grid>
+    
 </Window>
