Add new window "Settings"

--- a/BinanceAPI/MainWindow.xaml
+++ b/BinanceAPI/MainWindow.xaml
@@ -62,6 +62,7 @@
         <dxe:TextEdit x:Name="ttime_restart"  PreviewTextInput="NumericOnly" Margin="0,145,66,0" VerticalAlignment="Top" EditValue="2" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="28" IsEnabled="False"/>
         <CheckBox x:Name="cbReloadData" Content="" HorizontalAlignment="Right" Margin="0,145,219,0" Grid.RowSpan="2" VerticalAlignment="Top"/>
         <Label x:Name="lbReloadTime" Content="1" Margin="0,145,10,0" VerticalAlignment="Top" IsEnabled="False" Foreground="#FF120000" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="50"/>
+        <Button x:Name="Settings" Content="Настройки" HorizontalAlignment="Left" Margin="667,85,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="83" Click="Settings_Click"/>
 
     </Grid>
 
