--- a/BinanceAPI/MainWindow.xaml
+++ b/BinanceAPI/MainWindow.xaml
@@ -34,7 +34,7 @@
         <Button x:Name="Stop" Content="Стоп" Margin="0,74,124,0" VerticalAlignment="Top" Click="Button_Click_1" Height="22" HorizontalAlignment="Right" Width="50" Grid.Row="1"/>
 
         <ComboBox x:Name="cbPair" Margin="0,9,7,0" VerticalAlignment="Top" Height="22" HorizontalAlignment="Right" Width="120" Grid.Row="1"/>
-        <DataGrid FontSize="14" FontWeight="Bold" x:Name="Table" ItemsSource="{Binding }"  AutoGenerateColumns="False" Margin="10,1,260,19" LoadingRow="Table_LoadingRow" Grid.Row="1">
+        <DataGrid FontSize="14" FontWeight="Bold" x:Name="Table" ItemsSource="{Binding }" Margin="10,1,260,19" LoadingRow="Table_LoadingRow" Grid.Row="1">
 
 
             <DataGrid.Columns>
