--- a/BinanceAPI/MainWindow.xaml
+++ b/BinanceAPI/MainWindow.xaml
@@ -34,7 +34,7 @@
         <Button x:Name="Stop" Content="Стоп" Margin="0,74,124,0" VerticalAlignment="Top" Click="Button_Click_1" Height="22" HorizontalAlignment="Right" Width="50" Grid.Row="1"/>
 
         <ComboBox x:Name="cbPair" Margin="0,9,7,0" VerticalAlignment="Top" Height="22" HorizontalAlignment="Right" Width="120" Grid.Row="1"/>
-        <DataGrid FontSize="14" FontWeight="Bold" x:Name="Table" ItemsSource="{Binding }" Margin="10,1,260,19" LoadingRow="Table_LoadingRow" Grid.Row="1">
+        <DataGrid AutoGenerateColumns="False" FontSize="14" FontWeight="Bold" x:Name="Table" ItemsSource="{Binding }" Margin="10,1,260,19" LoadingRow="Table_LoadingRow" Grid.Row="1">
 
 
             <DataGrid.Columns>
@@ -54,15 +54,15 @@
         <Button x:Name="btndelete" Content="Удалить" Margin="0,36,155,0" VerticalAlignment="Top" Click="btndelete_Click" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="78"/>
         <ComboBox x:Name="cbdelete" Margin="0,36,6,0" VerticalAlignment="Top" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="120"/>
         <ListBox x:Name="list" Margin="0,194,11,19" HorizontalAlignment="Right" Width="231" Grid.Row="1"/>
-        <Label x:Name="cbReload" Content="Таймер перезагрузки" Margin="0,114,95,0" VerticalAlignment="Top" IsEnabled="False" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="120" OpacityMask="#ffffffff">
+        <Label x:Name="cbReload" Content="Таймер перезагрузки" Margin="0,114,95,0" VerticalAlignment="Top" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="120" OpacityMask="#ffffffff" Visibility="Hidden">
             <Label.Foreground>
                 <SolidColorBrush Color="#FF040100" Opacity="1"/>
             </Label.Foreground>
         </Label>
-        <dxe:TextEdit x:Name="ttime_restart"  PreviewTextInput="NumericOnly" Margin="0,114,62,0" VerticalAlignment="Top" EditValue="2" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="28" IsEnabled="False"/>
-        <CheckBox x:Name="cbReloadData" Content="" HorizontalAlignment="Right" Margin="0,114,215,0" Grid.RowSpan="2" VerticalAlignment="Top" IsChecked="True"/>
-        <Button x:Name="Settings" Content="API ключ" Margin="0,74,35,0" Grid.RowSpan="2" VerticalAlignment="Top" Click="Settings_Click" HorizontalAlignment="Right" Width="83"/>
-        <Label x:Name="cbReload_Copy" Content="мин" Margin="0,114,30,0" VerticalAlignment="Top" IsEnabled="False" Foreground="#FF120000" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="27"/>
+        <dxe:TextEdit x:Name="ttime_restart"  PreviewTextInput="NumericOnly" Margin="0,114,62,0" VerticalAlignment="Top" EditValue="2" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="28" Visibility="Hidden"/>
+        <CheckBox x:Name="cbReloadData" Content="" HorizontalAlignment="Right" Margin="0,114,215,0" Grid.RowSpan="2" VerticalAlignment="Top" IsChecked="True" Visibility="Hidden"/>
+        <Button x:Name="Settings" Content="API ключ" Margin="0,74,35,0" Grid.RowSpan="2" VerticalAlignment="Top" Click="Settings_Click" HorizontalAlignment="Right" Width="83" ScrollViewer.VerticalScrollBarVisibility="Visible" Visibility="Hidden"/>
+        <Label x:Name="cbReload_Copy" Content="мин" Margin="0,114,30,0" VerticalAlignment="Top" Foreground="#FF120000" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="27" Visibility="Hidden"/>
         <Button x:Name="btnSetingsAlert" Content=" Настройки&#xD;&#xA;оповещения" HorizontalAlignment="Right" Margin="0,141,26,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="48" Width="108" Click="btnSetingsAlert_Click" IsDefault="True" RenderTransformOrigin="0.5,0.5"/>
         <Label x:Name="cbReload_Copy1" Content="Оповещение" Margin="0,154,139,0" VerticalAlignment="Top" IsEnabled="False" Height="22" Grid.Row="1" HorizontalAlignment="Right" Width="76" OpacityMask="#FF944545">
             <Label.Foreground>
